Avoid right toc overflow on the footer

--- a/src/css/toc.css
+++ b/src/css/toc.css
@@ -35,7 +35,7 @@
 
 .toc.sidebar .toc-menu ul {
   max-height: var(--toc-height);
-  /* overflow-y: auto; */
+  overflow-y: auto;
   scrollbar-width: none;
 }
 
